# task02---zoo-eededeedencohen

./: CMakeLists.txt  README.md
include/: Animal.h  CMakeLists.txt  CloneFish.h  Dog.h  Fish.h  Leon.h  Location.h  Mammal.h  Monkey.h  Owl.h  Shark.h  Winged.h  Zoo.h
src/: Animal.cpp  CMakeLists.txt  CloneFish.cpp  Dog.cpp  Fish.cpp  Leon.cpp  Location.cpp  Mammal.cpp  Monkey.cpp  Owl.cpp  Shark.cpp  Winged.cpp  Zoo.cpp  tasks_week3_eden_cohen.cpp
